++++++++++++
FCTX Changes
++++++++++++

Whats new in FCTX 1.6.2
-----------------------

 - ENH: fct_chk_eq_dbl and fct_chk_neq_dbl show more digits on failure.

Whats new in FCTX 1.6.1
-----------------------

 - FIX: Removes unreferenced variable, and fixes a /W4 warning with
   MSVC.
 - FIX: FCT_INIT removes hard coded argc/argv dependency. Previously
   you had to use those variables or it wouldn't compile.
 - FIX: Cast FCT_NUM_FAILED to int to avoid 64 bit warning about
   down casting. This cast is safe.

Whats new in FCTX 1.6.0
-----------------------

 - ENH: New fct_chk_ex will check that a C++ exception is generated within 
   a code block. Only in C++. 
 - ENH: Add new FCT_BGN_FN/FCT_END_FN to bootstrap the test framework
   without using "main".
 - ENH: Add new FCT_INIT, FCT_FINAL, and FCT_NUM_FAILED to allow you
   to initialize and finalize FCTX within your own custom function.


Whats new in FCTX 1.5.0
-----------------------

This release focused on a rework of the fct_req check to allow it to
abort a test suite if a setup or teardown check fails. This involved
some disruptive work to the test suite structure, and warrants a
release on its own. The change should be backwards compatible.

 - ENH: fct_req will now abort a test suite if it fails in a setup and
   teardown block. 

Whats new in FCTX 1.4.2
-----------------------

Many thanks to suggestions from Rhys Ulerich (http://github.com/RhysU)
for his patches to make FCTX better.

 - ENH: Ability to use fct_chk in an if conditional. You can then
   conditionally execute further checks based on the first check.
 - ENH: Allow user to mutate main's argv (useful for initializing
   libraries. Thanks to RhysU.
 - FIX: Fix to handle simple unit test case (catches segmentation
   fault).
 - FIX: Warning corrections for GCC 4.3.4, Intel 11.1. Thanks to
   RhysU.
 - FIX: DOC - Updated Getting Started sample to use FCT_QTEST_END.
   Thanks to RhysU for the fix.

Whats new in FCTX 1.4.1