@@ -6,6 +6,8 @@ Whats new in FCTX 1.6.2
 -----------------------
 
  - ENH: fct_chk_eq_dbl and fct_chk_neq_dbl show more digits on failure.
+ - ENH: fct_chk_eqtol_dbl and fct_chk_neqtol_dbl permit using an
+   absolute tolerance different than DBL_EPILSON.
 
 Whats new in FCTX 1.6.1
 -----------------------
